--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,12 @@ body {
   font-style: normal;
   font-size: 20px;
   line-height: 150%;
-  background-color: #dff6f6;
-  background-image: url("../img/bg.png");
+  background-color: #ffe2d6ba;
+
   background-size: 800px;
   background-repeat: repeat;
   color: #305050;
-}
+} 
 
 .logo {
   width: 70%;
